<resources>
<string name="app_name">Drinks app</string>
<string name="app_title">Choose your drink</string>

<string name="login_username">Username</string>
<string name="login_password">Password</string>
<string name="login_login">Login</string>
<string name="login_register">Register</string>
<string name="login_remember_me">Remember me</string>
<string name="login_invalid_credentials">Invalid username and/or password</string>

<string name="register_register_title">Create a New Account</string>
<string name="register_username">Username</string>
<string name="register_password">Password</string>
<string name="register_email">E-mail</string>
<string name="register_register">Register</string>
<string name="register_invalid_credentials">Invalid username, email and/or password</string>

<string name="search_loading_data">Please wait for drinks app data</string>
<string name="search_error_reading_data">Couldnt read data from API, for more information:</string>
<string name="search_no_results">No results for this query: </string>
    </resources>